MSHR-185: Bundle formbuilder for npm

--- a/src/mdFormBuilder.html
+++ b/src/mdFormBuilder.html
@@ -1,5 +1,5 @@
 <form ng-submit="submitForm()" id="FormBuilder" name="{{FormBuilder.name}}" novalidate>
-	<link rel="stylesheet" type="text/css" href="/scripts/directives/mdFormBuilder/mdFormBuilder.css" />
+	<link rel="stylesheet" type="text/css" data-href="mdFormBuilder.css" />
 
 	<div ng-if="FormBuilder.sections.length === 0">
 		<div class="loadingDiv">
