Add updates to formbuilder from rwanda accreditation app

--- a/src/controls/mdfbWebcamDialogPopup.html
+++ b/src/controls/mdfbWebcamDialogPopup.html
@@ -4,8 +4,8 @@
       <div class="md-toolbar-tools">
         <h2>Profile Picture</h2>
         <span flex></span>
-        <md-button class="md-primary md-raised md-button md-ink-ripple" ng-click="cancel()">
-          <i class="material-icons ng-binding ng-scope" style="color: #fff; font-size: 40px; vertical-align:middle;">close</i>
+        <md-button class="md-icon-button" ng-click="cancel()">
+          <md-icon md-svg-src="img/icons/ic_close_24px.svg" aria-label="Close dialog"></md-icon>
         </md-button>
       </div>
     </md-toolbar>
