--- a/src/controls/mdfbSelectSearch.html
+++ b/src/controls/mdfbSelectSearch.html
@@ -1,28 +1,24 @@
 <md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
 
-
 	<label>{{field.title}}</label>
-  <md-select ng-model="field.value"
-             md-on-close="clearSearchTerm()"
-             data-md-container-class="selectdemoSelectHeader"
-             name="{{field.name}}" 
-             ng-disabled="field.settings.disabled || globals.viewModeOnly"
-             ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
-             multiple>
+  <md-select 
+    name="{{field.name}}"
+    ng-model="field.value"
+    md-on-close="clearSearchTerm()"
+    data-md-container-class="selectdemoSelectHeader"
+    ng-disabled="field.settings.disabled || globals.viewModeOnly"
+    ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
+    multiple>
     <md-select-header class="demo-select-header">
       <input ng-model="searchTerm"
-             type="search"
-             placeholder="Search for {{field.title}}"
-             class="demo-header-searchbox _md-text">
+        type="search"
+        placeholder="Search for {{field.title}}"
+        class="demo-header-searchbox _md-text">
     </md-select-header>
     <md-optgroup label="vegetables">
       <md-option ng-value="option.key" ng-repeat="option in field.options | filter:searchTerm">{{option.value}}</md-option>
     </md-optgroup>
-  </md-select>
-
-
-
-  
+  </md-select> 
 
   <div ng-messages="form[field.name].$error" ng-show="form[field.name].$invalid && form[field.name].$touched">
     <div ng-message="required">This field is required</div>
