--- a/src/controls/mdfbDatePicker.html
+++ b/src/controls/mdfbDatePicker.html
@@ -1,8 +1,8 @@
 <md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
   <label>{{field.title}}</label>
   <md-datepicker 
-    name="{{field.name}}" 
-    ng-model="myDate"
+    name="{{field.name}}"
+    ng-model="field.value"
     ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
     ng-disabled="field.settings.disabled || globals.viewModeOnly"></md-datepicker>
     
