--- a/src/controls/mdfbInput.html
+++ b/src/controls/mdfbInput.html
@@ -1,6 +1,10 @@
 <md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
   <label>{{field.title}}</label>
-  <input ng-model="$parent[field.name]" name="{{field.name}}" ng-disabled="field.settings.disabled || globals.viewModeOnly" ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show" />
+  <input 
+    name="{{field.name}}"
+    ng-model="field.value"
+    ng-disabled="field.settings.disabled || globals.viewModeOnly" 
+    ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
   </div>
