--- a/src/controls/mdfbMatrix.html
+++ b/src/controls/mdfbMatrix.html
@@ -6,7 +6,11 @@
     </div>
     <div class="matrix-row" ng-repeat="row in field.config.rows track by $index" layout="row">
       <span class="matrix-cell" flex="50" layout="column" layout-align="center">{{row.value}}</span>
-      <md-radio-group name="{{row.id}}" ng-model="row.selected" ng-change="MatrixView._updateValidity()" flex layout="row">
+      <!-- TODO: Needs to be configured properly to receive correct values -->
+      <md-radio-group 
+        name="{{row.id}}" 
+        ng-model="row.selected" 
+        ng-change="MatrixView._updateValidity()" flex layout="row">
         <span class="matrix-cell radio-button-cell" flex ng-repeat="column in field.config.columns track by $index">
         <md-radio-button value={{column.value}} aria-label="..."></md-radio-button>
         </span>
