--- a/src/controls/mdfbDatePicker.html
+++ b/src/controls/mdfbDatePicker.html
@@ -10,5 +10,7 @@
   <div ng-messages="form[field.name].$error" ng-show="form[field.name].$invalid && form[field.name].$touched">
     <div ng-message="required">This field is required</div>
     <div ng-message="format">Invalid format</div>
+    <div ng-message="mindate">Before allowed Date</div>
+    <div ng-message="maxdate">After allowed Date</div>
   </div>
 </md-input-container>
