KI-210: Fix mdfb multiple select search

--- a/src/controls/mdfbSelectSearch.html
+++ b/src/controls/mdfbSelectSearch.html
@@ -8,7 +8,8 @@
     data-md-container-class="selectdemoSelectHeader"
     ng-disabled="field.settings.disabled || globals.viewModeOnly"
     ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show"
-    ng-multiple="!field.settings.disableMultiple">
+    ng-multiple="!field.settings.disableMultiple"
+		multiple>
     <md-select-header class="demo-select-header">
       <input ng-model="searchTerm"
         type="search"
