Updated select/search html to cater for sinlge select search

--- a/src/controls/mdfbSelect.html
+++ b/src/controls/mdfbSelect.html
@@ -3,11 +3,20 @@
   <md-select 
     name="{{field.name}}"
     ng-model="field.value"
-    ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show" 
-    ng-disabled="field.settings.disabled || globals.viewModeOnly" 
-    md-on-open="loadOptions()">
-    <md-option ng-value="option.key" ng-repeat="option in field.options">{{option.value}}</md-option>
+    md-on-close="clearSearchTerm()"
+    data-md-container-class="selectdemoSelectHeader"
+    ng-disabled="field.settings.disabled || globals.viewModeOnly"
+    ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show">
+    <md-select-header class="demo-select-header" ng-show="field.settings.searchOptions">
+      <input ng-model="searchTerm"
+        type="search"
+        placeholder="Search for {{field.title}}"
+        class="demo-header-searchbox _md-text">
+    </md-select-header>
+    <md-option ng-value="option.key" ng-repeat="option in field.options | filter:searchTerm">{{option.value}}</md-option>
   </md-select>
+
+
 
   <div ng-messages="form[field.name].$error" ng-show="form[field.name].$invalid && form[field.name].$touched">
     <div ng-message="required">This field is required</div>
