--- a/src/controls/mdfbWebcam.html
+++ b/src/controls/mdfbWebcam.html
@@ -1,6 +1,6 @@
 <md-input-container>
 
-  <img ng-if="!photo" src="/images/avatar.jpg" width="60" height="60" style="float: right" />
+  <img ng-if="!photo" src="app/images/avatar.jpg" width="60" height="60" style="float: right" />
   <img ng-if="photo" ng-src="{{photo}}" width="60" height="60" style="float: right" />
 
 	<span style="float: left; margin-top: 7px; color: #777;">
