--- a/src/mdFormBuilder.html
+++ b/src/mdFormBuilder.html
@@ -41,6 +41,7 @@
 	              <mdfb-radio-custom form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="radioCustom"></mdfb-radio-custom>
 								<mdfb-select form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="select"></mdfb-select>
 								<mdfb-select-search form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="selectSearch"></mdfb-select-search>
+								<mdfb-text form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="text"></mdfb-text>
 	              <mdfb-matrix form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="matrix"></mdfb-matrix>
 								<mdfb-matrix-custom form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="matrixCustom"></mdfb-matrix-custom>
 								<mdfb-chips form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="chips"></mdfb-chips>
@@ -83,6 +84,7 @@
 									<mdfb-radio-custom form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="radioCustom"></mdfb-radio-custom>
 									<mdfb-select form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="select"></mdfb-select>
 									<mdfb-select-search form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="selectSearch"></mdfb-select-search>
+									<mdfb-text form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="text"></mdfb-text>
 									<mdfb-matrix form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="matrix"></mdfb-matrix>
 	                <mdfb-matrix-custom form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="matrixCustom"></mdfb-matrix-custom>
 									<mdfb-chips form="$eval(FormBuilder.name)" field="field" globals="FormBuilder.globals" ng-switch-when="chips"></mdfb-chips>
