--- a/src/controls/mdfbSelectSearch.html
+++ b/src/controls/mdfbSelectSearch.html
@@ -1,4 +1,4 @@
-<md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
+<md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }">
 
 	<label>{{field.title}}</label>
   <md-select 
