--- a/src/controls/mdfbCheckboxes.html
+++ b/src/controls/mdfbCheckboxes.html
@@ -1,4 +1,4 @@
-<md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
+<md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }">
   
   <style>
   md-checkbox.md-align-top-left > div.md-container {
