--- a/src/controls/mdfbDisplay.html
+++ b/src/controls/mdfbDisplay.html
@@ -1,4 +1,4 @@
-<md-content style="margin: 10px 0px;" ng-show="field.show">
+<md-content style="margin: 10px 0px;">
 
   <label layout="row" style="border-bottom: 1px solid #ccc; margin-bottom: 5px; padding-bottom: 5px;" ng-if="field.title" ng-bind-html="field.title"></label>
   <div ng-bind-html="field.value" ng-if="field.value"></div>
