--- a/src/controls/mdfbRadio.html
+++ b/src/controls/mdfbRadio.html
@@ -1,4 +1,4 @@
-<md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
+<md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }">
   <div style="margin-bottom: 10px;">{{field.title}}</div>
   <md-radio-group
     name="{{field.name}}"
