RSA ID number validator, minor updates

--- a/src/controls/mdfbInputID.html
+++ b/src/controls/mdfbInputID.html
@@ -5,9 +5,9 @@
     ng-model="field.value" 
     ng-disabled="field.settings.disabled" 
     ng-required="field.settings.required && field.show"
-    check-id-number="field.settings.checkIdNumber" />
+    check-rsa-id-number="field.settings.checkRsaIdNumber" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
-    <div ng-message="checkIdNumber">Invalid ID Number</div>
+    <div ng-message="checkRsaIdNumber">Invalid RSA ID Number</div>
   </div>
 </md-input-container>
