Allow setting for min, max and step on number fields

--- a/src/controls/mdfbInputNumber.html
+++ b/src/controls/mdfbInputNumber.html
@@ -1,15 +1,15 @@
 <md-input-container ng-class="{ 'md-input-invalid' : form[field.name].$invalid && form[field.name].$touched }" ng-show="field.show">
   <label>{{field.title}}</label>
-  <input 
+  <input
     name="{{field.name}}"
     ng-model="field.value"
-    ng-disabled="field.settings.disabled || globals.viewModeOnly" 
-    type="number" 
-    min="" 
-    max="" 
+    ng-disabled="field.settings.disabled || globals.viewModeOnly"
+    type="number"
+    min="{{field.settings.min}}"
+    max="{{field.settings.max}}"
+    step="{{field.settings.step}}"
     ng-required="field.settings.required && !form.saveAsDraft.$modelValue && field.show" />
   <div ng-messages="form[field.name].$error">
     <div ng-message="required">This field is required</div>
   </div>
 </md-input-container>
-
